force-app/main/default/objects/Approval_Routing_Config__mdt/Approval_Routing_Config__mdt.object-meta.xml
<CustomObject>
    <label>Approval Routing Config</label>
    <pluralLabel>Approval Routing Configs</pluralLabel>
</CustomObject>