force-app/main/default/objects/Approval_Routing_Config__mdt/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <label>Approver Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>