force-app/main/default/objects/Approval_Routing_Config__mdt/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <label>Maximum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>