force-app/main/default/objects/Approval_Routing_Config__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description
  >API name of the object this routing rule applies to.</description>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDF_Request__c</fullName>
            </value>
            <value>
                <fullName>Deal_Registration__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>